force-app/main/default/objects/Integration_Logs__c/fields/Callout_Status__c.field-meta.xml
<CustomField>
    <fullName>Callout_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Callout Status</label>
    <type>Checkbox</type>
</CustomField>