force-app/main/default/objects/Integration_Logs__c/fields/HttpRequest__c.field-meta.xml
<CustomField>
    <fullName>HttpRequest__c</fullName>
    <label>HttpRequest</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>