force-app/main/default/objects/Integration_Logs__c/fields/HttpResponse__c.field-meta.xml
<CustomField>
    <fullName>HttpResponse__c</fullName>
    <label>HttpResponse</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>