force-app/main/default/objects/Integration_Logs__c/fields/OutboundAPI__c.field-meta.xml
<CustomField>
    <fullName>OutboundAPI__c</fullName>
    <label>OutboundAPI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>